--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
   <body>
     <!--header-->
     <header>
-      <div>
+      <nav>
         <a href="./index.html">Webstudio</a>
-        <nav>
-          <ul>
-            <li>Studio</li>
-            <li>Portfolio</li>
-            <li>Contacts</li>
-          </ul>
-        </nav>
+        <ul>
+          <li><a href="Studio">Studio</a></li>
+          <li><a href="Portfolio">Portfolio</a></li>
+          <li><a href="Contacts">Contacts</a></li>
+        </ul>
+      </nav>
+      <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
-      </div>
+      </address>
     </header>
   </body>
 </html>
