--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Webstudio</title>
   </head>
   <body>
-    <!--header-->
+    <!--Header-->
     <header>
       <nav>
         <a href="./index.html">Webstudio</a>
@@ -16,6 +16,7 @@
           <li><a href="Contacts">Contacts</a></li>
         </ul>
       </nav>
+
       <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
@@ -23,5 +24,9 @@
         </ul>
       </address>
     </header>
+    <!--Main content-->
+    <main>
+      <h1>Effective Solutions for Your Business</h1>
+    </main>
   </body>
 </html>
