--- a/index.html
+++ b/index.html
@@ -29,29 +29,95 @@
       <h1>Effective Solutions for Your Business</h1>
       <button type="button">Order Service</button>
 
-      <h2>Strategy</h2>
-      <p>
-        Our goal is to identify the business problem to walk away with the
-        perfect and creative solution.
-      </p>
+      <h2></h2>
+      <ul>
+        <li>
+          <h3>Strategy</h3>
+          <p>
+            Our goal is to identify the business problem to walk away with the
+            perfect and creative solution.
+          </p>
+        </li>
 
-      <h2>Punctuality</h2>
-      <p>
-        Bring the key message to the brand's audience for the best price within
-        the shortest possible time.
-      </p>
+        <li>
+          <h3>Punctuality</h3>
+          <p>
+            Bring the key message to the brand's audience for the best price
+            within the shortest possible time.
+          </p>
+        </li>
 
-      <h2>Diligence</h2>
-      <p>
-        Research and confirm brands with the strongest digital growth
-        opportunities and minimize risk.
-      </p>
+        <li>
+          <h3>Diligence</h3>
+          <p>
+            Research and confirm brands with the strongest digital growth
+            opportunities and minimize risk.
+          </p>
+        </li>
 
-      <h2>Technologies</h2>
-      <p>
-        Design practice focused on digital experiences. We bring forth a deep
-        passion for problem-solving.
-      </p>
+        <li>
+          <h3>Technologies</h3>
+          <p>
+            Design practice focused on digital experiences. We bring forth a
+            deep passion for problem-solving.
+          </p>
+        </li>
+      </ul>
+
+      <h2>Our Team</h2>
+      <ul>
+        <li>
+          <img
+            src="./images/team-1.jpg"
+            alt="Mark Guerrero, Product Designer"
+            width="264"
+            height="260"
+          />
+          <h3>Mark Guerrero</h3>
+          <p>Product Designer</p>
+        </li>
+
+        <li>
+          <img
+            src="./images/team-2.jpg"
+            alt="Tom Ford, Frontend Developer"
+            width="264"
+            height="260"
+          />
+          <h3>Mark Guerrero</h3>
+          <p>Product Designer</p>
+        </li>
+
+        <li>
+          <img
+            src="./images/team-3.jpg"
+            alt="Camila Garcia, Marketing"
+            width="264"
+            height="260"
+          />
+          <h3>Camila Garcia</h3>
+          <p>Marketing</p>
+        </li>
+
+        <li>
+          <img
+            src="./images/team-4.jpg"
+            alt="Daniel Wilson, UI Designer"
+            width="264"
+            height="260"
+          />
+          <h3>Daniel Wilson</h3>
+          <p>UI Designer</p>
+        </li>
+      </ul>
     </main>
+    <!--Footer section-->
+    <footer>
+      <a href="./index.html">Webstudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
