--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
               alt="Tom Ford, Frontend Developer"
               width="264"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
           </li>
 
           <li>
