--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <nav>
-        <a href="">Webstudio</a>
+        <a href="./index.html">Webstudio</a>
         <ul>
           <li><a href="Studio">Studio</a></li>
           <li><a href="Portfolio">Portfolio</a></li>
@@ -32,6 +32,7 @@
 
       <section>
         <h2></h2>
+        Our Features
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -114,7 +115,7 @@
     </main>
 
     <footer>
-      <a href="">Webstudio</a>
+      <a href="./index.html">Webstudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
