--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">Webstudio</a>
+        <a href="./index.html"></a>
         <ul>
           <li><a href="Studio">Studio</a></li>
           <li><a href="Portfolio">Portfolio</a></li>
@@ -115,7 +115,7 @@
     </main>
 
     <footer>
-      <a href="./index.html">Webstudio</a>
+      <a href="./index.html"></a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
