--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       </section>
 
       <section>
-        <h2></h2>
-        Our Features
+        <h2>Our Features</h2>
+
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -115,7 +115,7 @@
     </main>
 
     <footer>
-      <a href="./index.html"></a>
+      <a href="./index.html">Webstudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
