--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html"></a>
+        <a href="./index.html"></a>Webstudio
         <ul>
           <li><a href="Studio">Studio</a></li>
           <li><a href="Portfolio">Portfolio</a></li>
